--- a/SaludExpres/SaludExpres.csproj
+++ b/SaludExpres/SaludExpres.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="itext7" Version="9.1.0" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
