Para pruebas de servidores

--- a/SaludExpres/app.config
+++ b/SaludExpres/app.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="SaludExpresConnection"
-             connectionString="Server=localhost;Database=saludexpres;Uid=root;Pwd=321Malo.;"
+             connectionString="Server=192.168.239.240;Database=saludexpres;Uid=Jose;Pwd=321malo.;"
              providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
