--- a/SaludExpres/app.config
+++ b/SaludExpres/app.config
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<!---
+	<connectionStrings>
+		<add name="SaludExpresConnection"
+             connectionString="Server=192.168.10.1;Database=saludexpres;Uid=Jose;Pwd=321malo.;"
+             providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+	-->
+	<!---
 	<connectionStrings>
 		<add name="SaludExpresConnection"
              connectionString="Server=192.168.239.240;Database=saludexpres;Uid=Jose;Pwd=321malo.;"
+             providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+	-->
+	<connectionStrings>
+		<add name="SaludExpresConnection"
+             connectionString="Server=localhost;Database=saludexpres;Uid=root;Pwd=321Malo.;"
              providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
